# sql-fake-populate

./: .gitignore  LICENSE  README.md  connect.py  credentials.sample.yaml  get_credentials.py  main.py  pyproject.toml  requirements.txt
utils/: connect.py  get_credentials.py
